k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: picredit
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
